tests/contract_testcases/substrate/libraries/restrictions_05.sol

        library c {
            function foo() override public {}
        }
// ---- Expect: diagnostics ----
// error: 3:28-36: function in a library cannot override
